--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About
-header-img: "img/about-bg.png"
+header-img: "img/three.JPG"
 ---
 
 <p>I'm the Digital Preservation Librarian at Brown University in Rhode Island. I'm interested in archives, social justice, & pop culture. He/his. I contain multitudes. Good form, Bella Thorne.</p>
